--- a/UI/pages/service.html
+++ b/UI/pages/service.html
@@ -15,7 +15,6 @@
                 <nav>
                     <ul>
                         <li><a href="admin.html">Admin</a></li>
-                        <li><a href="post.html">Post</a></li>
                         <li class="current"><a href="./service.html">Services</a></li>
                         <li><a href="users.html">Users</a></li>
                         <li><a href="../index.html">Logout</a></li>
@@ -33,78 +32,11 @@
                                     </tr>
                                     <tr>
                                         <th>#</th>
-                                        <th>Names</th>
-                                        <th>Account Number</th>
-                                        <th>Account Type</th>
-                                        <th>Telehone</th>
-                                        <th>Create At</th>
+                                        <th>Title</th>
+                                        <th>Company</th>
+                                        <th>CreatedAt</th>
+                                        <th>UpdatedAt</th>
                                         <th>Action</th>
-                                    </tr>
-                                    <tr>
-                                        <td>1</td>
-                                        <td>Fly Ndayisenga</td>
-                                        <td>045 7898 456</td>
-                                        <td>Saving</td>
-                                        <td>078854555</td>
-                                        <td>2018/08/01</td>
-                                        <td>
-                                            <a href="admintasks.html" class="button_2">View</a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>2</td>
-                                        <td>Fly Ndayisenga</td>
-                                        <td>045 7898 456</td>
-                                        <td>Saving</td>
-                                        <td>078854555</td>
-                                        <td>2018/08/01</td>
-                                        <td>
-                                            <a href="admintasks.html" class="button_2">View</a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>3</td>
-                                        <td>Fly Ndayisenga</td>
-                                        <td>045 7898 456</td>
-                                        <td>Saving</td>
-                                        <td>078854555</td>
-                                        <td>2018/08/01</td>
-                                        <td>
-                                            <a href="admintasks.html" class="button_2">View</a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>4</td>
-                                        <td>Fly Ndayisenga</td>
-                                        <td>045 7898 456</td>
-                                        <td>Saving</td>
-                                        <td>078854555</td>
-                                        <td>2018/08/01</td>
-                                        <td>
-                                            <a href="admintasks.html" class="button_2">View</a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                            <td>4</td>
-                                            <td>Fly Ndayisenga</td>
-                                            <td>045 7898 456</td>
-                                            <td>Saving</td>
-                                            <td>078854555</td>
-                                            <td>2018/08/01</td>
-                                            <td>
-                                                <a href="admintasks.html" class="button_2">View</a>
-                                            </td>
-                                    </tr>
-                                    <tr>
-                                            <td>4</td>
-                                            <td>Fly Ndayisenga</td>
-                                            <td>045 7898 456</td>
-                                            <td>Saving</td>
-                                            <td>078854555</td>
-                                            <td>2018/08/01</td>
-                                            <td>
-                                                <a href="admintasks.html" class="button_2">View</a>
-                                            </td>
                                     </tr>
                                 </table>
                             </article>
@@ -115,6 +47,69 @@
             <a href="admin.html">Administration</a>
             <p>E-services, copyright &copy; 2019</p>
         </footer>
+        <script>
+        fetch('http://localhost:5000/api/services', {
+				method: 'GET',
+				headers: {
+					'Accept': 'application/json, text/plain, */*',
+					'Content-type': 'application/json',
+				}
+			}).then((res) => res.json())
+			.then((data) => {
+				  if(data.status == 404) {
+					  console.log(data.error);
+				  } else {
+					    data.forEach(function(service){
+						var table = document.getElementById('accounts-table');
+						var row = table.insertRow(table.rows.length);
+						var cell1 = row.insertCell(0);
+						var cell2 = row.insertCell(1);
+						var cell3 = row.insertCell(2);
+						var cell4 = row.insertCell(3);
+                        var cell5 = row.insertCell(4);
+                        var cell6 = row.insertCell(5);
 
+						cell1.innerHTML = table.rows.length - 2;
+						cell2.innerHTML = service.title;
+						cell3.innerHTML = service.company;
+                        cell4.innerHTML = new Date(service.createdAt).toLocaleDateString("en-US", { weekday: 'long', year: 'numeric', month: 'short', day: 'numeric' });
+                        cell5.innerHTML = new Date(service.updatedAt).toLocaleDateString("en-US", { weekday: 'long', year: 'numeric', month: 'short', day: 'numeric' });
+                        cell6.innerHTML = '<a id="delete_button' + service.id + '" href="#" class="button_3">Delete</a>';
+
+                        document.getElementById('delete_button' + user.id).addEventListener('click', function(){
+
+                                        var confirmation = confirm('Are you sure you want to delete this service?')
+
+                                        if(confirmation == true) {
+                                            fetch('http://localhost:5000/api/users/' + user.id, {
+                                                method: 'DELETE',
+                                                headers: {
+                                                    'Accept': 'application/json, text/plain, */*',
+                                                    'Content-type': 'application/json',
+                                                }
+                                            }).then((res) => res.json())
+                                            .then((data) => {
+                                                let success_msg = document.getElementById('success-msg3');
+                                                let error_msg = document.getElementById('error-msg3');
+
+                                                if(data.status == 400 || data.status == 404){
+                                                    error_msg.style.display = 'block';
+                                                    error_msg.innerHTML = '<strong>Error: </strong> ' + data.error;
+                                                } else {
+                                                    success_msg.style.display = 'block';
+                                                    success_msg.innerHTML = '<strong>Success: </strong> ' + data.message;
+                                                    location.reload();
+                                                }
+                                            }).catch(function(error){
+                                                console.log(error);
+                                            });
+                                        }
+                                        });
+                    });
+				  }
+			}).catch(function(error){
+				console.log(error);
+			});
+        </script>
     </body>
 </html>
