ft(post-service): a user must be able to create a service

--- a/UI/index.html
+++ b/UI/index.html
@@ -108,7 +108,7 @@
     </script>
     <script>
       let services = document.getElementById('services');
-      fetch('http://localhost:5000/api/services', {
+      fetch('https://e-services-manzi.herokuapp.com/api/services', {
         method: 'GET',
         mode: 'cors',
         headers: {
