--- a/UI/pages/about.html
+++ b/UI/pages/about.html
@@ -67,7 +67,7 @@
                   let error_msg = document.getElementById('error-msg2');
                   let success_msg = document.getElementById('success-msg2');
           
-                  fetch('http://localhost:5000/api/users', {
+                  fetch('https://e-services-manzi.herokuapp.com/api/users', {
                     method: 'POST',
                     headers: {
                       Accept: 'application/json, text/plain, */*',
