--- a/UI/pages/login.html
+++ b/UI/pages/login.html
@@ -34,7 +34,7 @@
         let password = document.getElementById('password').value;
         let error_msg = document.getElementById('error-msg3');
 
-        fetch('http://localhost:5000/api/users/signin', {
+        fetch('https://e-services-manzi.herokuapp.com/api/users/signin', {
           method: 'POST',
           headers: {
             Accept: 'application/json, text/plain, */*',
