--- a/UI/pages/post.html
+++ b/UI/pages/post.html
@@ -100,7 +100,7 @@
         formData.append('description', description);
         formData.append('image', image);
 
-        fetch('http://localhost:5000/api/services', {
+        fetch('https://e-services-manzi.herokuapp.com/api/services', {
           method: 'POST',
           headers: {
             Accept: 'application/json, text/plain, */*'
