--- a/UI/pages/service.html
+++ b/UI/pages/service.html
@@ -48,7 +48,7 @@
             <p>E-services, copyright &copy; 2019</p>
         </footer>
         <script>
-        fetch('http://localhost:5000/api/services', {
+        fetch('https://e-services-manzi.herokuapp.com/api/services', {
 				method: 'GET',
 				headers: {
 					'Accept': 'application/json, text/plain, */*',
@@ -81,7 +81,7 @@
                                         var confirmation = confirm('Are you sure you want to delete this service?')
 
                                         if(confirmation == true) {
-                                            fetch('http://localhost:5000/api/users/' + user.id, {
+                                            fetch('https://e-services-manzi.herokuapp.com/api/users/' + user.id, {
                                                 method: 'DELETE',
                                                 headers: {
                                                     'Accept': 'application/json, text/plain, */*',
