--- a/UI/pages/services.html
+++ b/UI/pages/services.html
@@ -60,7 +60,7 @@
         let error_msg = document.getElementById('error-msg2');
         let success_msg = document.getElementById('success-msg2');
 
-        fetch('http://localhost:5000/api/users', {
+        fetch('https://e-services-manzi.herokuapp.com/api/users', {
           method: 'POST',
           headers: {
             Accept: 'application/json, text/plain, */*',
@@ -89,7 +89,7 @@
     </script>
     <script>
       let service = document.getElementById('host');
-      fetch('http://localhost:5000/api/services', {
+      fetch('https://e-services-manzi.herokuapp.com/api/services', {
         method: 'GET',
         headers: {
           Accept: 'application/json, text/plain, */*',
