--- a/UI/pages/users.html
+++ b/UI/pages/users.html
@@ -50,7 +50,7 @@
             <p>E-services, copyright &copy; 2019</p>
         </footer>
         <script>
-            fetch('http://localhost:5000/api/users', {
+            fetch('https://e-services-manzi.herokuapp.com/api/users', {
 				method: 'GET',
 				headers: {
 					'Accept': 'application/json, text/plain, */*',
@@ -83,7 +83,7 @@
                             var confirmation = confirm('Are you sure you want to delete this user?')
 
                             if(confirmation == true) {
-                                fetch('http://localhost:5000/api/users/' + user.id, {
+                                fetch('https://e-services-manzi.herokuapp.com/api/users/' + user.id, {
                                     method: 'DELETE',
                                     headers: {
                                         'Accept': 'application/json, text/plain, */*',
