ft(separate-javascript): remove javascript from html file for clean codes
  - make javascript into different files
  - make error messages clear and user friendly

--- a/UI/pages/login.html
+++ b/UI/pages/login.html
@@ -24,38 +24,6 @@
       </form>
     </div>
 
-    <script>
-      document.getElementById('signin-form').addEventListener('submit', login);
-
-      function login(e) {
-        e.preventDefault();
-
-        let email = document.getElementById('username').value;
-        let password = document.getElementById('password').value;
-        let error_msg = document.getElementById('error-msg3');
-
-        fetch('https://e-services-manzi.herokuapp.com/api/users/signin', {
-          method: 'POST',
-          headers: {
-            Accept: 'application/json, text/plain, */*',
-            'Content-type': 'application/json'
-          },
-          body: JSON.stringify({
-            email: email,
-            password: password
-          })
-        })
-          .then(res => res.json())
-          .then(data => {
-            console.log(data);
-            if (data.status === 200) {
-              window.location.replace('admin.html');
-            } else {
-              error_msg.style.display = 'block';
-              error_msg.innerHTML = data.error;
-            }
-          });
-      }
-    </script>
+    <script src="../Javascript/login.js"></script>
   </body>
 </html>
