--- a/UI/pages/teach.html
+++ b/UI/pages/teach.html
@@ -46,26 +46,6 @@
       <a href="login.html">Administration</a>
       <p>E-services, copyright &copy; 2019</p>
     </footer>
-    <script>
-      var urlParams = new URLSearchParams(location.search);
-      var id = urlParams.get('id');
-      let service = document.getElementById('host');
-      fetch(`https://e-services-manzi.herokuapp.com/api/services/${id}`, {
-        method: 'GET',
-        headers: {
-          Accept: 'application/json, text/plain, */*',
-          'Content-type': 'application/json'
-        }
-      })
-        .then(res => res.json())
-        .then(data => {
-          console.log(data);
-          service.innerHTML = `<li>
-              <h3>${data.data.title}</h3>
-              <img src="${data.data.image}" />
-              <p>${data.data.description}</p>
-            </li>`;
-        });
-    </script>
+    <script src="../Javascript/readOneService.js"></script>
   </body>
 </html>
