--- a/UI/index.html
+++ b/UI/index.html
@@ -68,68 +68,7 @@
       <a href="./pages/login.html">Administration</a>
       <p>E-services, copyright &copy; 2019</p>
     </footer>
-    <script>
-      document.getElementById('signup-form').addEventListener('submit', signup);
-
-      function signup(e) {
-        e.preventDefault();
-
-        let fullname = document.getElementById('name').value;
-        let email = document.getElementById('email').value;
-        let error_msg = document.getElementById('error-msg2');
-        let success_msg = document.getElementById('success-msg2');
-
-        fetch('https://e-services-manzi.herokuapp.com/api/users', {
-          method: 'POST',
-          mode: 'cors',
-          headers: {
-            Accept: 'application/json, text/plain, */*',
-            'Content-type': 'application/json'
-          },
-          body: JSON.stringify({
-            fullname: fullname,
-            email: email
-          })
-        })
-          .then(res => res.json())
-          .then(data => {
-            if (data.status !== 201) {
-              error_msg.style.display = 'block';
-              error_msg.innerHTML = data.error;
-            } else {
-              error_msg.style.display = 'none';
-              success_msg.style.display = 'block';
-              success_msg.innerHTML = data.message;
-              document.getElementById('name').value = '';
-              document.getElementById('email').value = '';
-            }
-          });
-      }
-    </script>
-    <script>
-      let services = document.getElementById('services');
-      fetch('https://e-services-manzi.herokuapp.com/api/services', {
-        method: 'GET',
-        mode: 'cors',
-        headers: {
-          Accept: 'application/json, text/plain, */*',
-          'Content-type': 'application/json'
-        }
-      })
-        .then(res => res.json())
-        .then(data => {
-          for (var i = data.length - 1; i >= 0; i--) {
-            var description1 = data[i].description.substring(0,97) + '...';
-            services.innerHTML += `<div class="service1">
-                                    <img src="${data[i].image}" />
-                                    <h3><a href="./pages/teach.html?id=${data[i].id}">${
-                                      data[i].title
-                                    }</a></h3>
-                                    <p>${data[i].description.length>100?description1:data[i].description.substring(0,100)}</p>
-                                    </div>`;
-            if (i === data.length - 3) break;
-          }
-        });
-    </script>
+    <script src="./Javascript/signup.js"></script>
+    <script src="./Javascript/getAllServices.js"></script>
   </body>
 </html>
