--- a/UI/pages/services.html
+++ b/UI/pages/services.html
@@ -48,67 +48,7 @@
       <a href="login.html">Administration</a>
       <p>E-services, copyright &copy; 2019</p>
     </footer>
-
-    <script>
-      document.getElementById('signup-form').addEventListener('submit', signup);
-
-      function signup(e) {
-        e.preventDefault();
-
-        let fullname = document.getElementById('name').value;
-        let email = document.getElementById('email').value;
-        let error_msg = document.getElementById('error-msg2');
-        let success_msg = document.getElementById('success-msg2');
-
-        fetch('https://e-services-manzi.herokuapp.com/api/users', {
-          method: 'POST',
-          headers: {
-            Accept: 'application/json, text/plain, */*',
-            'Content-type': 'application/json'
-          },
-          body: JSON.stringify({
-            fullname: fullname,
-            email: email
-          })
-        })
-          .then(res => res.json())
-          .then(data => {
-            if (data.status !== 201) {
-              error_msg.style.display = 'block';
-              error_msg.innerHTML = data.error;
-            } else {
-              error_msg.style.display = 'none';
-              success_msg.style.display = 'block';
-              success_msg.innerHTML = data.message;
-              document.getElementById('name').value = '';
-              document.getElementById('email').value = '';
-            }
-            console.log(data);
-          });
-      }
-    </script>
-    <script>
-      let service = document.getElementById('host');
-      fetch('https://e-services-manzi.herokuapp.com/api/services', {
-        method: 'GET',
-        headers: {
-          Accept: 'application/json, text/plain, */*',
-          'Content-type': 'application/json'
-        }
-      })
-        .then(res => res.json())
-        .then(data => {
-          console.log(data);
-          data.forEach(element => {
-            
-            service.innerHTML += `<li>
-                                    <h3><a href="./teach.html?id=${
-                                      element.id
-                                    }">${element.title}</a></h3>
-                                    <p>${element.description.substring(0,187) + '...'}</p>
-                                </li>`;
-          });
-        });
-    </script>
+    <script src="../Javascript/signup.js"></script>
+    <script src="../Javascript/services.js"></script>
   </body>
 </html>
